examples/invalid/syntaxErr/exception/missingDo.wacc
# do notation is missing

# Output:
# #syntax_error#

# Program:

begin
    try
        int x = 1
    catch ArithmeticException e
        println e
   done
end